samples/_failures_safe/1761006527_6adccb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c6bbcf86.c: In function ‘main’:
./samples/SAFE/__tmp_c6bbcf86.c:173:5: error: expected expression at end of input
  173 |     if (
      |     ^~
./samples/SAFE/__tmp_c6bbcf86.c:173:5: error: expected declaration or statement at end of input
